--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+planning/
+memory-bank/
+
+# documentation files (except README)
+*.md
+!README.md
