--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
   - type: web
     name: energy-plan-mvp
     runtime: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install --include=dev && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
