--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0",
     "fast-xml-parser": "^5.3.2",
     "next": "^14.2.0",
     "postcss": "^8.4.0",
@@ -21,8 +23,5 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.5.0"
   },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
-  }
+  "devDependencies": {}
 }
