--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@
 
 services:
   - type: web
-    name: energy-plan-mvp
+    name: EnergyPlan
     runtime: node
     buildCommand: npm install && npm run build
     startCommand: npm start
