--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "devCommand": "npm run dev",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node"
     }
   },
   "headers": [
